<resources>
    <string name="app_name">PingPong</string>

    <!--MAIN ACTIVITY-->
    <string name="tile_welcome">WELCOME</string>
    <string name="btn_newGame">New Game</string>
    <string name="btn_history">History</string>

    <!--BOTTOM NAV-->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_photo">Photo</string>

    <!--FRAGMENT PHOTO-->
    <string name="takePhoto">Take a photo</string>
    <string name="save">Save</string>

    <!--FRAGMENT NEW MATCH-->
    <string name="newMatch">New Match</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="nbOfSets">Number of sets</string>
    <string name="firstServ">First service</string>
    <string name="start">Start !</string>
    <string name="next">Next</string>
    <string name="radioButton_3">3</string>
    <string name="radioButton_4">4</string>

    <!--FRAGMENT MAP-->
    <string name="locate_string">Localisation : </string>
    <string name="hint_loc">Localisation</string>
    <string name="get_loc">Get Location</string>
    <string name="latitude">Latitude</string>
    <string name="tv_latitude">0.0</string>
    <string name="longitude">Longitude</string>
    <string name="tv_longitude">0.0</string>

    <!-- GAME HISTORY-->
    <string name="gameHistory_title">LIST OF PAST GAMES</string>
    <string name="gameHistory_infos">hello</string>

    <!-- NEW POINT-->
    <string name="newPointTitle">Gamer</string>
    <string name="radioButton_Gamer1">Gamer 1</string>
    <string name="radioButton_Gamer2">Gamer 2</string>
    <string name="txt_pointFor">Point for :</string>
    <string name="pointType">Type of point</string>
    <string name="txtWiningReturn">Winning return</string>
    <string name="txt_Ace">Ace</string>
    <string name="radioButton_winningShot">Winning Shot</string>
    <string name="radioButton_directFault">Direct Fault</string>
    <string name="txt_endOfPoint">End Point</string>

    <!-- END OF GAME-->
    <string name="title_EndofGame">END OF GAME</string>
    <string name="textBeforeWinner">The winner is: </string>
    <string name="nameWinner">Jack</string>
    <string name="endOfGame_BacktoMenu">Menu</string>
    <string name="hint_game_1">Game 1</string>

    <!-- STATS FRAG -->
    <string name="title_stats">STATISTICS</string>
    <string name="game_id_stats">Game_ID</string>
    <string name="stats_Nameplayer1">Name1</string>
    <string name="stats_Nameplayer2">Name2</string>
    <string name="stats_Winner">Winner of the game :</string>
    <string name="stats_WinnerName">Winner_Name</string>
    <string name="stats_table">STATS</string>
    <string name="nb_winning_shots">NB Winning Shots</string>
    <string name="nb_direct_faults">NB Direct Faults</string>
    <string name="nb_aces">NB Aces</string>
    <string name="nb_win_points">NB Win Points</string>
    <string name="pct_winning_shots">% Winning Shots</string>
    <string name="pct_direct_faults">% Direct Faults</string>
    <string name="pct_aces">% Aces</string>
    <string name="TOTAL_win_points">TOTAL WIN POINTS</string>
    <string name="pct_winning_returns">% Winning Returns</string>
    <string name="francais">Français</string>
    <string name="english">English</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
</resources>